--- a/src/output.css
+++ b/src/output.css
@@ -13,6 +13,8 @@
     --text-base--line-height: calc(1.5 / 1);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-3xl: 1.875rem;
+    --text-3xl--line-height: calc(2.25 / 1.875);
     --font-weight-light: 300;
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
@@ -266,6 +268,9 @@
   .gap-x-6 {
     column-gap: calc(var(--spacing) * 6);
   }
+  .gap-x-7 {
+    column-gap: calc(var(--spacing) * 7);
+  }
   .gap-x-12 {
     column-gap: calc(var(--spacing) * 12);
   }
@@ -322,6 +327,12 @@
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
+  .px-\[17\] {
+    padding-inline: 17;
+  }
+  .px-\[17px\] {
+    padding-inline: 17px;
+  }
   .px-\[23px\] {
     padding-inline: 23px;
   }
@@ -334,8 +345,17 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
+  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
+  }
+  .py-12 {
+    padding-block: calc(var(--spacing) * 12);
+  }
+  .py-\[10px\] {
+    padding-block: 10px;
   }
   .py-\[20px\] {
     padding-block: 20px;
@@ -355,11 +375,17 @@
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
   }
+  .pt-\[7\] {
+    padding-top: 7;
+  }
   .pt-\[50px\] {
     padding-top: 50px;
   }
   .pt-\[64px\] {
     padding-top: 64px;
+  }
+  .pt-\[74px\] {
+    padding-top: 74px;
   }
   .pt-\[96px\] {
     padding-top: 96px;
@@ -370,8 +396,17 @@
   .pb-12 {
     padding-bottom: calc(var(--spacing) * 12);
   }
+  .pb-\[2\] {
+    padding-bottom: 2;
+  }
+  .pb-\[27px\] {
+    padding-bottom: 27px;
+  }
   .pb-\[55px\] {
     padding-bottom: 55px;
+  }
+  .pb-\[74px\] {
+    padding-bottom: 74px;
   }
   .pb-\[120px\] {
     padding-bottom: 120px;
@@ -387,6 +422,10 @@
   .text-2xl\/\[150\] {
     font-size: var(--text-2xl);
     line-height: 150;
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
   }
   .text-\[36px\]\/\[150\%\] {
     font-size: 36px;
@@ -433,6 +472,9 @@
   }
   .text-\[\#ffffff\] {
     color: #ffffff;
+  }
+  .text-white {
+    color: var(--color-white);
   }
   .underline {
     text-decoration-line: underline;
