--- a/src/output.css
+++ b/src/output.css
@@ -183,8 +183,20 @@
   .relative {
     position: relative;
   }
+  .top-\[1px\] {
+    top: 1px;
+  }
   .top-\[10px\] {
     top: 10px;
+  }
+  .top-\[15px\] {
+    top: 15px;
+  }
+  .top-\[17px\] {
+    top: 17px;
+  }
+  .top-\[18px\] {
+    top: 18px;
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
@@ -279,9 +291,6 @@
   .gap-x-12 {
     column-gap: calc(var(--spacing) * 12);
   }
-  .gap-x-\[55\] {
-    column-gap: 55;
-  }
   .gap-x-\[55px\] {
     column-gap: 55px;
   }
@@ -296,9 +305,6 @@
   }
   .overflow-hidden {
     overflow: hidden;
-  }
-  .rounded {
-    border-radius: 0.25rem;
   }
   .rounded-full {
     border-radius: calc(infinity * 1px);
@@ -326,9 +332,6 @@
   .bg-\[\#FF7527\] {
     background-color: #FF7527;
   }
-  .bg-\[\#\] {
-    background-color: #;
-  }
   .bg-white {
     background-color: var(--color-white);
   }
@@ -340,9 +343,6 @@
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
-  }
-  .px-\[17\] {
-    padding-inline: 17;
   }
   .px-\[17px\] {
     padding-inline: 17px;
@@ -377,9 +377,6 @@
   .py-\[20px\] {
     padding-block: 20px;
   }
-  .py-\[31\] {
-    padding-block: 31;
-  }
   .py-\[68px\] {
     padding-block: 68px;
   }
@@ -394,9 +391,6 @@
   }
   .pt-6 {
     padding-top: calc(var(--spacing) * 6);
-  }
-  .pt-\[7\] {
-    padding-top: 7;
   }
   .pt-\[50px\] {
     padding-top: 50px;
@@ -415,9 +409,6 @@
   }
   .pb-12 {
     padding-bottom: calc(var(--spacing) * 12);
-  }
-  .pb-\[2\] {
-    padding-bottom: 2;
   }
   .pb-\[27px\] {
     padding-bottom: 27px;
@@ -438,10 +429,6 @@
   .text-2xl\/\[150\%\] {
     font-size: var(--text-2xl);
     line-height: 150%;
-  }
-  .text-2xl\/\[150\] {
-    font-size: var(--text-2xl);
-    line-height: 150;
   }
   .text-3xl {
     font-size: var(--text-3xl);
@@ -491,9 +478,6 @@
   .text-\[\#FF7527\] {
     color: #FF7527;
   }
-  .text-\[\#\] {
-    color: #;
-  }
   .text-\[\#ffffff\] {
     color: #ffffff;
   }
@@ -503,10 +487,6 @@
   .underline {
     text-decoration-line: underline;
   }
-  .shadow-xl {
-    --tw-shadow: 0 20px 25px -5px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 8px 10px -6px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -515,10 +495,6 @@
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .duration-150 {
-    --tw-duration: 150ms;
-    transition-duration: 150ms;
   }
   .duration-300 {
     --tw-duration: 300ms;
@@ -569,33 +545,11 @@
       background-color: #F6762E;
     }
   }
-  .after\:transition {
-    &::after {
-      content: var(--tw-content);
-      transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-      transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-      transition-duration: var(--tw-duration, var(--default-transition-duration));
-    }
-  }
-  .after\:duration-150 {
-    &::after {
-      content: var(--tw-content);
-      --tw-duration: 150ms;
-      transition-duration: 150ms;
-    }
-  }
   .after\:duration-300 {
     &::after {
       content: var(--tw-content);
       --tw-duration: 300ms;
       transition-duration: 300ms;
-    }
-  }
-  .after\:ease-in-out {
-    &::after {
-      content: var(--tw-content);
-      --tw-ease: var(--ease-in-out);
-      transition-timing-function: var(--ease-in-out);
     }
   }
   .after\:content-\[\'\'\] {
@@ -664,6 +618,24 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-duration {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-ease {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-content {
+  syntax: "*";
+  initial-value: "";
+  inherits: false;
+}
 @property --tw-shadow {
   syntax: "*";
   inherits: false;
@@ -729,24 +701,6 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
-@property --tw-duration {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-ease {
-  syntax: "*";
-  inherits: false;
-}
-@property --tw-content {
-  syntax: "*";
-  initial-value: "";
-  inherits: false;
-}
 @property --tw-translate-x {
   syntax: "*";
   inherits: false;
@@ -767,6 +721,10 @@
     *, ::before, ::after, ::backdrop {
       --tw-border-style: solid;
       --tw-font-weight: initial;
+      --tw-outline-style: solid;
+      --tw-duration: initial;
+      --tw-ease: initial;
+      --tw-content: "";
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
@@ -781,10 +739,6 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
-      --tw-duration: initial;
-      --tw-ease: initial;
-      --tw-content: "";
       --tw-translate-x: 0;
       --tw-translate-y: 0;
       --tw-translate-z: 0;
